# VM

./: .gitignore  CMakeLists.txt  README.md  assembler.cpp  shared.hpp  vm.cpp
example_programs/: function.asm  helloWorld.asm  input.asm  loop.asm  stack.asm
programs/: halt.asm  helloWorld.asm  input.asm  loop.asm  printExclamation  printExlamation
src/: CMakeLists.txt  assembler.cpp  shared.hpp  shared_test.cpp  vm.cpp
src/assembler/: CMakeLists.txt  assembler.cpp
src/vm/: CMakeLists.txt  vm.cpp
